# OLS_regressor

./: 20240109-Team18-Contract.docx  CHANGELOG.md  CONTRIBUTING.md  README.md  environment.yml  preprocess.ipynb  pyproject.toml
.github/workflows/: ci-cd.yml
data/: preprocessed_data.csv
docs/: Makefile  conf.py  example.ipynb  make.bat
src/: regressor.py
src/aussie_car_prices/: __init__.py  aussie_car_prices.py  regressor.py
src/ols_regressor/: cross_validate.py  r2_score.py  regressor.py
tests/: test_aussie_car_prices.py  test_cross_validate.py  test_osl_regresor.py  test_predict.py  test_r2_score.py  test_regressor.py
