[tool.poetry]
name = "ols_regressor"
version = "0.1.0"
description = "Ausis Car Price Regressor"
authors = ["Charles Xu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.3"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
